--- a/README
+++ b/README
@@ -1,1 +1,8 @@
-HowHardCoultItBe (HHCIB) project. Built on fresh JavaEE7 Technology!
+HowHardCoultItBe (HHCIB) project. A web page where people can submit their way of doing things such as 'How to build a swimming pool foundation'
+or 'How making tax reduction'. HHCIB Also includes a voting mechanism. 
+
+License
+
+Copyright © 2012-2013 Andreas Enbohm
+
+Distributed under the GPLv3 license
