--- a/README
+++ b/README
@@ -7,7 +7,10 @@ Copyright © 2012-2013 Andreas Enbohm
 
 Distributed under Apache License v2.0
 
-What need to be done?
+What needs to be done?
 - Design and Layout of the applications, better look and feel
 - Using messages resources (no hard coded messages)
 - Application.properties file (maybe CDI to inject properties)
+- Improve social sharing
+- Refactor Facades, add an abstract subject facade
+- Support for users and accounts
