--- a/README
+++ b/README
@@ -13,4 +13,14 @@ What needs to be done?
 - Application.properties file (maybe CDI to inject properties)
 - Improve social sharing
 - Refactor Facades, add an abstract subject facade
-- Support for users and accounts
+- Support for users and accounts (i.e login support)
+- Support for supplying a custom connection string to MongoDB (localhost hardcoded today)
+
+Getting started:
+- Requires Java 7
+- Maven 3.x
+- Git
+- MongoDB 2.4.5 (running at localhost, default settings)
+- A JavaEE 7 compliant application server (tested on Glassfish 4)
+
+
