--- a/README
+++ b/README
@@ -8,20 +8,17 @@ Copyright © 2012-2013 Andreas Enbohm
 Distributed under Apache License v2.0
 
 What needs to be done?
-- Design and Layout of the applications, better look and feel
+- Design and Layout of the applications, better look and feel, e.g. login form, menu etc.
 - Using messages resources (no hard coded messages)
 - Application.properties file (maybe CDI to inject properties)
 - Improve social sharing
-- Refactor Facades, add an abstract subject facade
-- My Pages needs functionality like changing passwords and deleting (own) subjects.
+- My Pages needs functionality like changing passwords and updating E-mail
 - Support for supplying a custom connection string to MongoDB (MongoHQ URL hardcoded today)
-- Voting handling must be improved, you must not be able to vote on your own subjects.
-- A admin page
+- A admin page to delete subjecs and users. Page exist, but contains nothing today (admin_page.xhtml)
 
 Getting started:
 - Requires Java 7
 - Maven 3.x
 - Git
 - A JavaEE 7 compliant application server (tested on Glassfish 4)
-
-
+- Internet access (since the database is hosted as MongoHQ.com)
