--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-HowHardCoultItBe (HHCIB) project. A web application where people can submit their way of craftmanship things such as 'How to build a swimming pool foundation', 'Preparing a Lobster' 
-or 'How making a certain tax reduction'. HHCIB also includes a voting mechanism. 
+This is the HowHardCoultItBe (HHCIB) project. It's web application where people can submit their way of craftmanship things such as 'How to build a swimming pool', 'Preparing a Lobster' 
+or 'How making a certain tax reduction'. HHCIB also includes a voting mechanism, social sharing and user management. 
 
 License
 
