--- a/README
+++ b/README
@@ -15,6 +15,7 @@ What needs to be done?
 - My Pages needs functionality like changing passwords and updating E-mail
 - Support for supplying a custom connection string to MongoDB (MongoHQ URL hardcoded today)
 - A admin page to delete subjecs and users. Page exist, but contains nothing today (admin_page.xhtml)
+- A search UI (users should not need to browse categories)
 
 Getting started:
 - Requires Java 7
