--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is the HowHardCoultItBe (HHCIB) project. HHCIB is a  web application where people can submit their way of craftmanship things such as 'How to build a swimming pool', 'Preparing a Lobster' 
+This is the HowHardCanItBe (HHCIB) project. HHCIB is a  web application where people can submit their way of craftmanship things such as 'How to build a swimming pool', 'Preparing a Lobster' 
 or 'How making a certain tax reduction'. HHCIB also includes a voting mechanism, social sharing and user management. 
 
 License
